--- a/src/Database/Database.csproj
+++ b/src/Database/Database.csproj
@@ -4,16 +4,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{9AD027B8-4CAE-4605-95DF-46116F30B5CF}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{87D19EAF-E3D9-4044-A97A-FEE691691ABE}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>EdFiValidation.ApiProxy.Core</RootNamespace>
-    <AssemblyName>EdFiValidation.ApiProxy.Core</AssemblyName>
+    <RootNamespace>Database</RootNamespace>
+    <AssemblyName>Database</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -23,6 +24,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -31,9 +33,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EdFiValidation.ApiProxy.Core, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\ApiProxy\Bin\EdFiValidation.ApiProxy.Core.dll</HintPath>
+    <Reference Include="CommandLine">
+      <HintPath>..\packages\CommandLineParser.1.9.71\lib\net45\CommandLine.dll</HintPath>
     </Reference>
     <Reference Include="MongoDB.Bson">
       <HintPath>..\packages\mongocsharpdriver.1.9.2\lib\net35\MongoDB.Bson.dll</HintPath>
@@ -42,17 +43,14 @@
       <HintPath>..\packages\mongocsharpdriver.1.9.2\lib\net35\MongoDB.Driver.dll</HintPath>
     </Reference>
     <Reference Include="StructureMap">
-      <HintPath>..\packages\structuremap.3.0.4.125\lib\net40\StructureMap.dll</HintPath>
+      <HintPath>..\packages\structuremap.3.0.5.130\lib\net40\StructureMap.dll</HintPath>
     </Reference>
     <Reference Include="StructureMap.Net4">
-      <HintPath>..\packages\structuremap.3.0.4.125\lib\net40\StructureMap.Net4.dll</HintPath>
+      <HintPath>..\packages\structuremap.3.0.5.130\lib\net40\StructureMap.Net4.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.ServiceModel" />
-    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -60,23 +58,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Commands\CreateApiLogItem.cs" />
-    <Compile Include="Utility\CombGuid.cs" />
-    <Compile Include="Dependencies\CoreRegistry.cs" />
-    <Compile Include="Handlers\ApiLogItemCommandHandler.cs" />
-    <Compile Include="Handlers\ICommandHandler.cs" />
+    <Compile Include="Config.cs" />
+    <Compile Include="DependencyInjection\AbsFactory.cs" />
+    <Compile Include="Create\DropDatabaseTask.cs" />
+    <Compile Include="Create\ICreateTask.cs" />
+    <Compile Include="Create\UseCaseCreateTask.cs" />
+    <Compile Include="Data\IDataList.cs" />
+    <Compile Include="Data\UseCaseDataList.cs" />
+    <Compile Include="ITask.cs" />
+    <Compile Include="DependencyInjection\ProgramRegistry.cs" />
+    <Compile Include="Update\IUpdateTask.cs" />
+    <Compile Include="Options.cs" />
+    <Compile Include="PopulationAction.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Queries\ApiLogItemQueryService.cs" />
-    <Compile Include="Queries\IApiLogItemQueryService.cs" />
-    <Compile Include="Queries\IUseCaseQueryService.cs" />
-    <Compile Include="Queries\UseCaseQueryService.cs" />
-    <Compile Include="Services\ApiRequestProcessor.cs" />
-    <Compile Include="Services\IApiRequestProcessor.cs" />
-    <Compile Include="Utility\IApiTransactionUtility.cs" />
-    <Compile Include="Utility\ApiTransactionUtility.cs" />
-    <Compile Include="Utility\IConfig.cs" />
+    <Compile Include="Update\UseCaseUpdateTask.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
