--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -61,13 +61,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Commands\CreateApiLogItem.cs" />
+    <Compile Include="Services\IValidationService.cs" />
+    <Compile Include="Services\ValidationService.cs" />
     <Compile Include="Utility\CombGuid.cs" />
     <Compile Include="Dependencies\CoreRegistry.cs" />
     <Compile Include="Handlers\ApiLogItemCommandHandler.cs" />
     <Compile Include="Handlers\ICommandHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Queries\ApiLogItemQueryService.cs" />
-    <Compile Include="Queries\IApiLogItemQueryService.cs" />
+    <Compile Include="Queries\RequestResponsePairQueryService.cs" />
+    <Compile Include="Queries\IRequestResponsePairQueryService.cs" />
     <Compile Include="Queries\IUseCaseQueryService.cs" />
     <Compile Include="Queries\UseCaseQueryService.cs" />
     <Compile Include="Services\ApiRequestProcessor.cs" />
