Left out a command base interface, and also command ID's should always be created at the source, not the handler.... duh...

--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -61,6 +61,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Commands\CreateApiLogItem.cs" />
+    <Compile Include="Commands\CreateSesssionUseCaseSuccess.cs" />
+    <Compile Include="Commands\ICommand.cs" />
     <Compile Include="Services\IValidationService.cs" />
     <Compile Include="Services\ValidationService.cs" />
     <Compile Include="Utility\CombGuid.cs" />
