--- a/src/Core.Model/Core.Model.csproj
+++ b/src/Core.Model/Core.Model.csproj
@@ -52,6 +52,7 @@
     <Compile Include="ModelBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RequestResponsePair.cs" />
+    <Compile Include="UseCaseValidation.cs" />
     <Compile Include="UseCase.cs" />
     <Compile Include="UseCaseItem.cs" />
   </ItemGroup>
