--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -61,8 +61,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Commands\CreateApiLogItem.cs" />
-    <Compile Include="Commands\CreateSesssionUseCaseSuccess.cs" />
+    <Compile Include="Commands\CreateUseCaseValidation.cs" />
     <Compile Include="Commands\ICommand.cs" />
+    <Compile Include="Handlers\UseCaseValidationHandler.cs" />
     <Compile Include="Services\IValidationService.cs" />
     <Compile Include="Services\ValidationService.cs" />
     <Compile Include="Utility\CombGuid.cs" />
