--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -66,6 +66,7 @@
     <Compile Include="Handlers\UseCaseValidationHandler.cs" />
     <Compile Include="Services\IValidationService.cs" />
     <Compile Include="Services\ValidationService.cs" />
+    <Compile Include="Utility\ApiTransactionUtilityExceptions.cs" />
     <Compile Include="Utility\CombGuid.cs" />
     <Compile Include="Dependencies\CoreRegistry.cs" />
     <Compile Include="Handlers\ApiLogItemCommandHandler.cs" />
