Some Uri parsing error handling in place

--- a/src/Core/Core.csproj
+++ b/src/Core/Core.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Commands\CreateApiLogItem.cs" />
     <Compile Include="Services\IValidationService.cs" />
     <Compile Include="Services\ValidationService.cs" />
+    <Compile Include="Utility\ApiTransactionUtilityExceptions.cs" />
     <Compile Include="Utility\CombGuid.cs" />
     <Compile Include="Dependencies\CoreRegistry.cs" />
     <Compile Include="Handlers\ApiLogItemCommandHandler.cs" />
