--- a/src/ApiProxyTests/ApiProxyTests.csproj
+++ b/src/ApiProxyTests/ApiProxyTests.csproj
@@ -44,6 +44,7 @@
       <HintPath>..\packages\structuremap.3.0.4.125\lib\net40\StructureMap.Net4.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml.Linq" />
