--- a/src/ApiProxyTests/ApiProxyTests.csproj
+++ b/src/ApiProxyTests/ApiProxyTests.csproj
@@ -55,6 +55,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Core\ApiTransactionUtilityTests.cs" />
+    <Compile Include="Core\ValidationServiceTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestBase.cs" />
   </ItemGroup>
