--- a/src/Database/Database.csproj
+++ b/src/Database/Database.csproj
@@ -61,19 +61,19 @@
     <Compile Include="AppConfig.cs" />
     <Compile Include="IAppConfig.cs" />
     <Compile Include="DependencyInjection\AbsFactory.cs" />
-    <Compile Include="Create\DropDatabaseTask.cs" />
-    <Compile Include="Create\ICreateTask.cs" />
-    <Compile Include="Create\UseCaseCreateTask.cs" />
+    <Compile Include="Tasks\DropDatabaseTask.cs" />
+    <Compile Include="Tasks\ICreateTask.cs" />
+    <Compile Include="Tasks\UseCaseCreateTask.cs" />
     <Compile Include="Data\IDataList.cs" />
     <Compile Include="Data\UseCaseDataList.cs" />
-    <Compile Include="ITask.cs" />
+    <Compile Include="Tasks\ITask.cs" />
     <Compile Include="DependencyInjection\ProgramRegistry.cs" />
-    <Compile Include="Update\IUpdateTask.cs" />
+    <Compile Include="Tasks\IUpdateTask.cs" />
     <Compile Include="Options.cs" />
     <Compile Include="PopulationAction.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Update\UseCaseUpdateTask.cs" />
+    <Compile Include="Tasks\UseCaseUpdateTask.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
