--- a/src/ApiProxy/packages.config
+++ b/src/ApiProxy/packages.config
@@ -5,6 +5,7 @@
   <package id="bootstrap" version="3.2.0" targetFramework="net45" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net451" />
   <package id="jQuery" version="2.1.1" targetFramework="net45" />
+  <package id="knockoutjs" version="3.1.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
