--- a/src/ApiProxy/packages.config
+++ b/src/ApiProxy/packages.config
@@ -5,6 +5,7 @@
   <package id="bootstrap" version="3.2.0" targetFramework="net45" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net451" />
   <package id="jQuery" version="2.1.1" targetFramework="net45" />
+  <package id="Knockout.Mapping" version="2.4.0" targetFramework="net451" />
   <package id="knockoutjs" version="3.1.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.0" targetFramework="net45" />
@@ -22,6 +23,7 @@
   <package id="structuremap" version="3.0.4.125" targetFramework="net451" />
   <package id="StructureMap.MVC5" version="3.0.4.125" targetFramework="net451" />
   <package id="structuremap.web" version="3.0.0.108" targetFramework="net451" />
+  <package id="toastr" version="2.0.3" targetFramework="net451" />
   <package id="WebActivatorEx" version="2.0.5" targetFramework="net451" />
   <package id="WebGrease" version="1.6.0" targetFramework="net45" />
 </packages>
