--- a/src/Database/Database.csproj
+++ b/src/Database/Database.csproj
@@ -63,6 +63,7 @@
     <Compile Include="DependencyInjection\AbsFactory.cs" />
     <Compile Include="Tasks\DropDatabaseTask.cs" />
     <Compile Include="Tasks\ICreateTask.cs" />
+    <Compile Include="Tasks\ICreateForTestingTask.cs" />
     <Compile Include="Tasks\UseCaseCreateTask.cs" />
     <Compile Include="Data\IDataList.cs" />
     <Compile Include="Data\UseCaseDataList.cs" />
@@ -74,6 +75,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tasks\UseCaseUpdateTask.cs" />
+    <Compile Include="Tasks\UseCaseValidationCreateForTestingTask.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
