revamped to ko.

--- a/src/ApiProxy/ApiProxy.csproj
+++ b/src/ApiProxy/ApiProxy.csproj
@@ -182,11 +182,11 @@
     <Compile Include="Areas\HelpPage\SampleGeneration\TextSample.cs" />
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\ApiLogController.cs" />
+    <Compile Include="Controllers\CommandController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ProxyController.cs" />
+    <Compile Include="Controllers\QueryController.cs" />
     <Compile Include="Controllers\UseCaseController.cs" />
-    <Compile Include="Controllers\ValidateSessionController.cs" />
-    <Compile Include="Controllers\ValidationRunController.cs" />
     <Compile Include="DependencyResolution\DefaultRegistry.cs" />
     <Compile Include="DependencyResolution\IoC.cs" />
     <Compile Include="DependencyResolution\StructureMapDependencyScope.cs" />
@@ -195,6 +195,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Helpers\CustomBindings\CatchAllRouteBinding.cs" />
+    <Compile Include="Helpers\UiModelMapper.cs" />
     <Compile Include="Helpers\WebApiStructureMapResolver.cs" />
     <Compile Include="Models\ApiLogModel.cs" />
     <Compile Include="Models\ApiRequestModel.cs" />
@@ -202,18 +203,42 @@
     <Compile Include="Models\ApiTransactionModel.cs" />
     <Compile Include="Models\ApiUseCaseModel.cs" />
     <Compile Include="Models\ApiValidationIndexModel.cs" />
+    <Compile Include="Models\UiModelBase.cs" />
     <Compile Include="Models\UseCaseValidationModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="app.js" />
+    <Content Include="app\services\ajax.js" />
+    <Content Include="app\services\commandService.js" />
+    <Content Include="app\services\logger.js" />
+    <Content Include="app\services\menu.js" />
+    <Content Include="app\services\queryService.js" />
+    <Content Include="app\shell.js" />
+    <Content Include="app\viewmodels\home.js" />
+    <Content Include="app\viewmodels\sessions.js" />
+    <Content Include="app\viewmodels\session.js" />
+    <Content Include="app\viewmodels\useCase.js" />
+    <Content Include="app\viewmodels\useCases.js" />
+    <Content Include="app\views\404.html" />
+    <Content Include="app\views\home.html" />
+    <Content Include="app\views\session.html" />
+    <Content Include="app\views\sessions.html" />
+    <Content Include="app\viewmodels\validations.js" />
+    <Content Include="app\views\useCase.html" />
+    <Content Include="app\views\useCases.html" />
+    <Content Include="app\views\validations.html" />
     <Content Include="Areas\HelpPage\HelpPage.css" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\font-awesome.css" />
+    <Content Include="Content\font-awesome.min.css" />
     <Content Include="Content\toastr.css" />
     <Content Include="Content\toastr.min.css" />
     <Content Include="favicon.ico" />
+    <Content Include="fonts\fontawesome-webfont.svg" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -242,6 +267,10 @@
     <Content Include="Areas\HelpPage\Views\Help\Api.cshtml" />
     <Content Include="Content\toastr.scss" />
     <Content Include="Content\toastr.less" />
+    <Content Include="fonts\fontawesome-webfont.woff" />
+    <Content Include="fonts\fontawesome-webfont.ttf" />
+    <Content Include="fonts\fontawesome-webfont.eot" />
+    <Content Include="fonts\FontAwesome.otf" />
     <None Include="Scripts\jquery-2.1.1.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -249,13 +278,25 @@
     <Content Include="Scripts\jquery-2.1.1.min.js" />
     <Content Include="Scripts\knockout-3.1.0.debug.js" />
     <Content Include="Scripts\knockout-3.1.0.js" />
+    <Content Include="Scripts\knockout-amd-helpers.js" />
+    <Content Include="Scripts\knockout-amd-helpers.min.js" />
+    <Content Include="Scripts\knockout-history.js" />
+    <Content Include="Scripts\knockout-router.js" />
     <Content Include="Scripts\knockout.mapping-latest.debug.js" />
     <Content Include="Scripts\knockout.mapping-latest.js" />
+    <Content Include="Scripts\metisMenu.js" />
     <Content Include="Scripts\modernizr-2.7.2.js" />
+    <Content Include="Scripts\moment-with-langs.js" />
+    <Content Include="Scripts\moment-with-langs.min.js" />
+    <Content Include="Scripts\moment.js" />
+    <Content Include="Scripts\moment.min.js" />
+    <Content Include="Scripts\r.js" />
+    <Content Include="Scripts\require.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.matchmedia.addListener.js" />
     <Content Include="Scripts\respond.matchmedia.addListener.min.js" />
     <Content Include="Scripts\respond.min.js" />
+    <Content Include="Scripts\text.js" />
     <Content Include="Scripts\toastr.js" />
     <Content Include="Scripts\toastr.min.js" />
     <Content Include="Scripts\validateSession.js" />
