--- a/src/ApiProxy/packages.config
+++ b/src/ApiProxy/packages.config
@@ -4,8 +4,10 @@
   <package id="AutoMapper" version="3.2.1" targetFramework="net451" />
   <package id="bootstrap" version="3.2.0" targetFramework="net45" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net451" />
+  <package id="FontAwesome" version="4.1.0" targetFramework="net451" />
   <package id="jQuery" version="2.1.1" targetFramework="net45" />
   <package id="Knockout.Mapping" version="2.4.0" targetFramework="net451" />
+  <package id="Knockout-AMD-Helpers" version="0.7.0" targetFramework="net451" />
   <package id="knockoutjs" version="3.1.0" targetFramework="net451" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.0" targetFramework="net45" />
@@ -18,7 +20,9 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.7.2" targetFramework="net45" />
+  <package id="Moment.js" version="2.7.0" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="6.0.3" targetFramework="net45" />
+  <package id="RequireJS" version="2.1.14" targetFramework="net451" />
   <package id="Respond" version="1.4.2" targetFramework="net45" />
   <package id="structuremap" version="3.0.4.125" targetFramework="net451" />
   <package id="StructureMap.MVC5" version="3.0.4.125" targetFramework="net451" />
