--- a/src/ApiProxy/Web.config
+++ b/src/ApiProxy/Web.config
@@ -69,6 +69,10 @@
         <assemblyIdentity name="StructureMap" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.0.4.125" newVersion="3.0.4.125" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Net.Http.Formatting" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <system.webServer>
