--- a/src/ApiProxy/packages.config
+++ b/src/ApiProxy/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-
+  <package id="AngularJS.Animate" version="1.2.21" targetFramework="net451" />
+  <package id="AngularJS.Core" version="1.2.21" targetFramework="net451" />
+  <package id="AngularJS.Resource" version="1.2.21" targetFramework="net451" />
+  <package id="AngularJS.Route" version="1.2.21" targetFramework="net451" />
   <package id="Antlr" version="3.5.0.2" targetFramework="net45" />
   <package id="AutoMapper" version="3.2.1" targetFramework="net451" />
   <package id="bootstrap" version="3.2.0" targetFramework="net45" />
@@ -20,7 +23,6 @@
   <package id="Moment.js" version="2.8.1" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="6.0.3" targetFramework="net45" />
   <package id="RequireJS" version="2.1.14" targetFramework="net451" />
-  <package id="Respond" version="1.4.2" targetFramework="net45" />
   <package id="structuremap" version="3.0.5.130" targetFramework="net451" />
   <package id="StructureMap.MVC5" version="3.0.4.125" targetFramework="net451" />
   <package id="structuremap.web" version="3.0.0.108" targetFramework="net451" />
